# docs-sync-pipeline

./: .env.example  .gitignore  README.md  pyproject.toml
src/: main.py
